# panopoly

./: CLAUDE.md  README.org  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
docs/: initial-design.md
src/panopoly/: __init__.py  cli.py  core.py  ops.py
src/panopoly/commands/: __init__.py  config.py  env.py  init.py  project.py  source.py
tests/: conftest.py  test_cli.py  test_commands.py  test_core.py  test_ops.py
