[project]
name = "panopoly"
version = "0.1.0"
description = "Add your description here"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
panopoly = "panopoly:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
